...
                android:textColor="@android:color/background_dark"
                android:textColorHighlight="@android:color/white"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstTitleID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondTitleID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
...
                android:inputType="textPersonName"
                android:text="@string/company"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstCompanyID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondCompanyID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
...
                android:inputType="textPersonName"
                android:text="@string/location"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstLocationID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondLocationID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
...
                android:inputType="textPersonName"
                android:text="@string/yearly_salary"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstYearlySalaryID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondYearlySalaryID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
...
                android:inputType="textPersonName"
                android:text="@string/signing_bonus"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstSigningBonusID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondSigningBonusID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
...
                android:inputType="textPersonName"
                android:text="@string/yearly_bonus"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstYearlyBonusID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondYearlyBonusID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
...
                android:inputType="textPersonName"
                android:text="@string/retirement_benefits"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstRetirementBenefitID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondRetirementBenefitID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
...
                android:inputType="textPersonName"
                android:text="@string/leave_time"
                android:textSize="12sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/jobcomp_firstLeaveTimeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/jobcomp_secondLeaveTimeID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:textSize="14sp" />
...
                android:id="@+id/jobcomp_anotherComparisonButtonID"
                android:layout_width="198dp"
                android:layout_height="wrap_content"
                android:text="@string/another_comparison_button" />

            <Button
                android:id="@+id/jobcomp_cancelButtonID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@android:string/cancel" />
        </LinearLayout>

...
