...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/currentjob_titleID"
                android:layout_width="260dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="20" />
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/company"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/currentjob_companyID"
                android:layout_width="240dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="20" />
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/city"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/currentjob_cityID"
                android:layout_width="329dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="20" />
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/state"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/currentjob_stateID"
                android:layout_width="330dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="textPersonName"
                android:maxLength="20" />
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cost_of_living_index"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/currentjob_costLivingIndexID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="0"
                android:inputType="number"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yearly_salary"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/currentjob_yearlySalaryID"
                android:layout_width="265dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="0.0"
                android:inputType="numberDecimal"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/signing_bonus"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/currentjob_signingBonusID"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="0.0"
                android:inputType="numberDecimal"
...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yearly_bonus"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/currentjob_yearlyBonusID"
                android:layout_width="277dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="0.0"
                android:inputType="numberDecimal"
...
                android:text="@string/retirement_benefits"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="431dp" />

            <EditText
                android:id="@+id/currentjob_retirementBenefitID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="0.0"
                android:inputType="numberDecimal"
...
                android:text="@string/leave_time"
                android:textSize="18sp"
                tools:layout_editor_absoluteX="49dp"
                tools:layout_editor_absoluteY="431dp" />

            <EditText
                android:id="@+id/currentjob_leaveTimeID"
                android:layout_width="273dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="0"
                android:inputType="number"
...
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout12">

            <Button
                android:id="@+id/currentjob_saveButtonID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/save_button" />

            <Button
...
