...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/compsetting_leaveTimeID"
        android:layout_width="94dp"
        android:layout_height="42dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="36dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintBottom_toTopOf="@+id/compsetting_cancelButtonID"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compsetting_retirementBenefitID"
        app:layout_constraintVertical_bias="1.0" />

    <EditText
        android:id="@+id/compsetting_retirementBenefitID"
        android:layout_width="94dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compsetting_yearlyBonusID" />

    <EditText
        android:id="@+id/compsetting_yearlyBonusID"
        android:layout_width="94dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compsetting_signingBonusID" />

    <EditText
        android:id="@+id/compsetting_signingBonusID"
        android:layout_width="94dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="60dp"
        android:ems="10"
        android:inputType="number"
        android:maxLength="6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/compsetting_yearlySalaryID" />

    <TextView
        android:id="@+id/comparisonSettingHeaderID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
...
        app:layout_constraintEnd_toStartOf="@+id/compsetting_leaveTimeID"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_RetirementBenefits" />

    <Button
        android:id="@+id/compsetting_saveButtonID"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/save_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.195"
...
